Table roles {
  id serial [primary key]
  name varchar(32) [unique, not null]
}

Table users {
  id serial [primary key]
  role_id int [not null, ref: > roles.id]
  username varchar(32) [unique, not null]
  email varchar(64) [unique, not null]
  password_hash text [not null]
  created_at timestamptz [not null]
  notifications_enabled boolean [not null, default: true]
}

Table channels {
  id serial [primary key]
  user_id int [not null, ref: > users.id]
  name varchar(32) [unique, not null]
  description text
  created_at timestamptz [not null]
}

Table videos {
  id serial [primary key]
  channel_id int [not null, ref: > channels.id]
  title varchar(64) [not null]
  description text
  filepath text [not null]
  preview_filepath text [not null]
  created_at timestamptz [not null]
}

Table playlists {
  id serial [primary key]
  channel_id int [not null, ref: > channels.id]
  name varchar(32) [not null]
  description text
  created_at timestamptz [not null]
}

Table viewings {
  id serial [primary key]
  user_id int [not null, ref: > users.id]
  video_id int [not null, ref: > videos.id]
  watched_at timestamptz [not null]
}

Table comments {
  id serial [primary key]
  user_id int [not null, ref: > users.id]
  video_id int [not null, ref: > videos.id]
  content text [not null]
  created_at timestamptz [not null]
}

Table users_channels_subscriptions {
  user_id int [primary key, not null, ref: > users.id]
  channel_id int [primary key, not null, ref: > channels.id]
  new_videos_count int [not null, default: 0]
  subscribed_at timestamptz [not null]
}

Table playlists_videos {
  playlist_id int [primary key, not null, ref: > playlists.id]
  video_id int [primary key, not null, ref: > videos.id]
  number int [not null]
  added_at timestamptz [not null]
}

Table users_videos_ratings {
  user_id int [primary key, not null, ref: > users.id]
  video_id int [primary key, not null, ref: > videos.id]
  liked boolean [not null]
  rated_at timestamptz [not null]
}

Table users_comments_ratings {
  user_id int [primary key, not null, ref: > users.id]
  comment_id int [primary key, not null, ref: > comments.id]
  liked boolean [not null]
  rated_at timestamptz [not null]
}